csrc/ftxui_shim.h

typedef struct omni_ftxui_context_t omni_ftxui_context_t;
typedef struct omni_ftxui_app_t omni_ftxui_app_t;
typedef struct omni_ftxui_screen_t omni_ftxui_screen_t;
typedef struct omni_ftxui_event_t omni_ftxui_event_t;
typedef struct omni_ftxui_element_t omni_ftxui_element_t;
typedef struct omni_ftxui_component_t omni_ftxui_component_t;
typedef struct omni_ftxui_table_t omni_ftxui_table_t;
typedef struct omni_ftxui_canvas_t omni_ftxui_canvas_t;
typedef enum omni_ftxui_status {
    OMNI_FTXUI_STATUS_OK = 0,
    OMNI_FTXUI_STATUS_INVALID_ARGUMENT = 1,
    OMNI_FTXUI_STATUS_OUT_OF_MEMORY = 2,
    OMNI_FTXUI_STATUS_BACKEND_UNAVAILABLE = 3,
    OMNI_FTXUI_STATUS_NOT_SUPPORTED = 4,
    OMNI_FTXUI_STATUS_INTERNAL_ERROR = 5,
} omni_ftxui_status;
typedef enum omni_ftxui_border_style {
    OMNI_FTXUI_BORDER_LIGHT = 0,
    OMNI_FTXUI_BORDER_DASHED = 1,
    OMNI_FTXUI_BORDER_HEAVY = 2,
    OMNI_FTXUI_BORDER_ROUNDED = 3,
    OMNI_FTXUI_BORDER_DOUBLE = 4,
    OMNI_FTXUI_BORDER_EMPTY = 5,
} omni_ftxui_border_style;
typedef struct omni_ftxui_element_create_options {
    uint32_t size;
    uint32_t abi_version;
    omni_ftxui_element_kind kind;
    const char* text;
    float gauge_progress;
    omni_ftxui_direction direction;
    int32_t spinner_charset;
    size_t spinner_frame;
    int32_t canvas_width;
    int32_t canvas_height;
    size_t table_rows;
    size_t table_cols;
    void* graph_user_data;
    omni_ftxui_graph_callback_fn graph_cb;
} omni_ftxui_element_create_options;
typedef struct omni_ftxui_decorator_options {
    uint32_t size;
    uint32_t abi_version;
    omni_ftxui_decorator_kind kind;
    omni_ftxui_color color;
    omni_ftxui_width_or_height width_or_height;
    omni_ftxui_constraint constraint;
    int32_t size_value;
    const char* link;
} omni_ftxui_decorator_options;
typedef struct omni_ftxui_component_create_options {
    uint32_t size;
    uint32_t abi_version;
    omni_ftxui_component_kind kind;
    const char* label;
    const char* title;
    const char* text_value;
    const char** items;
    size_t item_count;
    int* selected_index;
    bool* checked_value;
    int* int_value;
    int int_min;
    int int_max;
    int int_step;
    float* float_value;
    float float_min;
    float float_max;
    float float_step;
    bool* visible_ptr;
    int* left;
    int* top;
    int* width;
    int* height;
    bool* resize_left;
    bool* resize_right;
    bool* resize_top;
    bool* resize_down;
    bool* hover_value;
    int split_direction;
    int* main_size;
} omni_ftxui_component_create_options;
typedef struct omni_ftxui_table_create_options {
    uint32_t size;
    uint32_t abi_version;
    size_t rows;
    size_t cols;
    const char** cells;
} omni_ftxui_table_create_options;
typedef struct omni_ftxui_canvas_create_options {
    uint32_t size;
    uint32_t abi_version;
    int32_t width;
    int32_t height;
} omni_ftxui_canvas_create_options;
typedef struct omni_ftxui_screen_create_options {
    uint32_t size;
    uint32_t abi_version;
    omni_ftxui_screen_mode mode;
    bool track_mouse;
    bool handle_piped_input;
    omni_ftxui_dimension width;
    omni_ftxui_dimension height;
} omni_ftxui_screen_create_options;
typedef struct omni_ftxui_callback_options {
    uint32_t size;
    uint32_t abi_version;
    void* user_data;
    omni_ftxui_render_callback_fn render_cb;
    omni_ftxui_event_callback_fn event_cb;
    omni_ftxui_action_callback_fn action_cb;
} omni_ftxui_callback_options;
omni_ftxui_status omni_ftxui_screen_create(
    omni_ftxui_context_t* context,
    const omni_ftxui_screen_create_options* options,
    omni_ftxui_screen_t** out_screen
);
void omni_ftxui_screen_destroy(omni_ftxui_screen_t* screen);
omni_ftxui_status omni_ftxui_screen_loop(
    omni_ftxui_context_t* context,
    omni_ftxui_screen_t* screen,
    omni_ftxui_component_t* root
);
omni_ftxui_status omni_ftxui_screen_post_event(
    omni_ftxui_context_t* context,
    omni_ftxui_screen_t* screen,
    const omni_ftxui_event_t* event
);
omni_ftxui_status omni_ftxui_screen_exit(
    omni_ftxui_context_t* context,
    omni_ftxui_screen_t* screen
);
omni_ftxui_status omni_ftxui_screen_request_animation_frame(
    omni_ftxui_context_t* context,
    omni_ftxui_screen_t* screen
);
omni_ftxui_status omni_ftxui_screen_set_track_mouse(
    omni_ftxui_context_t* context,
    omni_ftxui_screen_t* screen,
    bool enabled
);
omni_ftxui_status omni_ftxui_screen_set_handle_piped_input(
    omni_ftxui_context_t* context,
    omni_ftxui_screen_t* screen,
    bool enabled
);
/* App is a lightweight wrapper around screen + root component. It does not own either handle. */
omni_ftxui_status omni_ftxui_app_create(
    omni_ftxui_context_t* context,
    omni_ftxui_screen_t* screen,
    omni_ftxui_component_t* root,
    omni_ftxui_app_t** out_app
);
void omni_ftxui_app_destroy(omni_ftxui_app_t* app);
omni_ftxui_status omni_ftxui_app_run(omni_ftxui_context_t* context, omni_ftxui_app_t* app);
omni_ftxui_status omni_ftxui_app_exit(omni_ftxui_context_t* context, omni_ftxui_app_t* app);
omni_ftxui_status omni_ftxui_app_post_event(
    omni_ftxui_context_t* context,
    omni_ftxui_app_t* app,
    const omni_ftxui_event_t* event
);
omni_ftxui_status omni_ftxui_element_create(
    omni_ftxui_context_t* context,
    const omni_ftxui_element_create_options* options,
    omni_ftxui_element_t* const* children,
    size_t child_count,
    omni_ftxui_element_t** out_element
);
omni_ftxui_status omni_ftxui_element_graph_from_series(
    omni_ftxui_context_t* context,
    const double* values,
    size_t value_count,
    omni_ftxui_element_t** out_element
);
void omni_ftxui_element_destroy(omni_ftxui_element_t* element);
omni_ftxui_status omni_ftxui_element_apply_decorator(
    omni_ftxui_context_t* context,
    omni_ftxui_element_t* element,
    const omni_ftxui_decorator_options* options
);
omni_ftxui_status omni_ftxui_component_create(
    omni_ftxui_context_t* context,
    const omni_ftxui_component_create_options* options,
    omni_ftxui_component_t* const* children,
    size_t child_count,
    omni_ftxui_component_t** out_component
);
void omni_ftxui_component_destroy(omni_ftxui_component_t* component);
omni_ftxui_status omni_ftxui_component_add_child(
    omni_ftxui_context_t* context,
    omni_ftxui_component_t* parent,
    omni_ftxui_component_t* child
);
omni_ftxui_status omni_ftxui_component_take_focus(
    omni_ftxui_context_t* context,
    omni_ftxui_component_t* component
);
/*
 * Generic callback wrappers:
 * - renderer: wraps base component with a custom render callback.
 * - event handler: wraps base component with a custom event callback.
 * - action: attaches a generic click action to a button-like wrapper.
 */
omni_ftxui_status omni_ftxui_component_wrap_renderer(
    omni_ftxui_context_t* context,
    omni_ftxui_component_t* base,
    const omni_ftxui_callback_options* callbacks,
    omni_ftxui_component_t** out_component
);
omni_ftxui_status omni_ftxui_component_wrap_event_handler(
    omni_ftxui_context_t* context,
    omni_ftxui_component_t* base,
    const omni_ftxui_callback_options* callbacks,
    omni_ftxui_component_t** out_component
);
omni_ftxui_status omni_ftxui_component_from_element(
    omni_ftxui_context_t* context,
    omni_ftxui_element_t* element,
    omni_ftxui_component_t** out_component
);
/*
 * The quit-key wrapper retains the screen's underlying loop object until the
 * returned component is destroyed, so callers may destroy the screen handle
 * after wrapping without leaving the wrapper with a dangling screen pointer.
 */
omni_ftxui_status omni_ftxui_component_wrap_quit_keys(
    omni_ftxui_context_t* context,
    omni_ftxui_screen_t* screen,
    omni_ftxui_component_t* base,
    omni_ftxui_component_t** out_component
);
omni_ftxui_status omni_ftxui_component_wrap_maybe(
    omni_ftxui_context_t* context,
    omni_ftxui_component_t* base,
    bool* visible_ptr,
    omni_ftxui_component_t** out_component
);
omni_ftxui_status omni_ftxui_table_create(
    omni_ftxui_context_t* context,
    const omni_ftxui_table_create_options* options,
    omni_ftxui_table_t** out_table
);
void omni_ftxui_table_destroy(omni_ftxui_table_t* table);
omni_ftxui_status omni_ftxui_table_select_all(
    omni_ftxui_context_t* context,
    omni_ftxui_table_t* table,
    omni_ftxui_border_style border
);
omni_ftxui_status omni_ftxui_table_select_row(
    omni_ftxui_context_t* context,
    omni_ftxui_table_t* table,
    size_t row,
    omni_ftxui_border_style border
);
omni_ftxui_status omni_ftxui_table_select_column(
    omni_ftxui_context_t* context,
    omni_ftxui_table_t* table,
    size_t column,
    omni_ftxui_border_style border
);
omni_ftxui_status omni_ftxui_table_select_cell(
    omni_ftxui_context_t* context,
    omni_ftxui_table_t* table,
    size_t row,
    size_t column,
    omni_ftxui_border_style border
);
omni_ftxui_status omni_ftxui_table_render(
    omni_ftxui_context_t* context,
    omni_ftxui_table_t* table,
    omni_ftxui_element_t** out_element
);
omni_ftxui_status omni_ftxui_canvas_create(
    omni_ftxui_context_t* context,
    const omni_ftxui_canvas_create_options* options,
    omni_ftxui_canvas_t** out_canvas
);
void omni_ftxui_canvas_destroy(omni_ftxui_canvas_t* canvas);
omni_ftxui_status omni_ftxui_canvas_draw_text(
    omni_ftxui_context_t* context,
    omni_ftxui_canvas_t* canvas,
    int32_t x,
    int32_t y,
    const char* text
);
omni_ftxui_status omni_ftxui_canvas_draw_point_on(
    omni_ftxui_context_t* context,
    omni_ftxui_canvas_t* canvas,
    int32_t x,
    int32_t y
);
omni_ftxui_status omni_ftxui_canvas_draw_point_off(
    omni_ftxui_context_t* context,
    omni_ftxui_canvas_t* canvas,
    int32_t x,
    int32_t y
);
omni_ftxui_status omni_ftxui_canvas_draw_line(
    omni_ftxui_context_t* context,
    omni_ftxui_canvas_t* canvas,
    int32_t x1,
    int32_t y1,
    int32_t x2,
    int32_t y2
);
omni_ftxui_status omni_ftxui_canvas_render(
    omni_ftxui_context_t* context,
    omni_ftxui_canvas_t* canvas,
    omni_ftxui_element_t** out_element
);